chart/templates/readarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/target: "prod-ingress.markdavison.kiwi"
  labels:
    app: servarr
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - readarr.markdavison.kiwi
      secretName: readarr-tls
  rules:
  - host: readarr.markdavison.kiwi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: readarr-svc
            port:
              number: 80
